--- a/views/index.html
+++ b/views/index.html
@@ -1,129 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Liebre</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-
-
-
-
+    <title>Mercado liebre-Home</title>
+    <!--Linea 9: link para tener disponibles iconos de fontawesome, asi podre usar esa libreria-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!--ruta del css-->
+    <link rel="stylesheet" href="/css/estilo.css">
 
 </head>
+
 <body>
+
     <header>
-        <div class="horizon">
-        <div class="logo"><img src="images/logo-mercado-liebre.svg" class="logo__img">
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Buscar productos, marcas">
-        
-        <button class="boton"><i class="fas fa-search"></i></button>
-    </div>
-            <p class="quota"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
+
+        <div class="top-list">
+
+            <div class="logo">
+                <!--Ruta del logo y fotos: "img/logo o nombre de imagen"-->
+                <img src="img/logo-mercado-liebre.svg" alt="Logo mercado liebre">
+            </div>
+
+            <form action="" class="form-search">
+
+                <div class="search-bar">
+
+                    <!--search-->
+                    <input type="text" placeholder=" Buscar productos, marcas">
+                
+                    <button>
+                        <i class="fas fa-search"></i>
+                    </button>
+
+                </div>
+
+            </form>
+
+            <p class="quota"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas sin tarjeta de crédito</p>
+
         </div>
 
-        <div class="horizon2">
-            <nav>
-            <ul id="top-list">
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
+        <nav>
+
+            <ul class="buttom-list">
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
             </ul>
+
             <ul>
-                <li><a href="register">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
-                <li><a href="login">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
-                <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
+                <!--dos enlaces a las vistas de register y login-->
+                <li><a href="/register">Creá tu cuenta </a><i class="far fa-address-card"></i></li>
+                <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
+                <br>
             </ul>
+
         </nav>
-    </div>
         <div class="burger-menu">
+            <!--Menu hamburguesa copiado del pdf-->
             <i class="fas fa-bars"></i>
         </div>
+
     </header>
+
     <main class="home">
-        <div>
-            <img src="images/img-home-banner.jpg" width="100%" class="banner" alt="Imagen con ofertas">
-        </div>
+
+        <div class="banner"><img src="img/img-home-banner.jpg" alt="Imagen con ofertas" width="100%"></div>
+
+        <h2 class="historial">Basado en tu última visita</h2>
+
         <section>
-            <h3 class="section-title">Basado en tu ultima visita</h3>
-
-
+            <h3 class="section-title">
+                Ofertas
+            </h3>
             <article class="card">
-                <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de la cafetera">
-                <div class="card-content">
-                    <div class="icon-truck">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <div class="product-info">
-                        <p>$6.770</p>
-                        <p>40% OFF</p>
-                    </div >
-                    <h5 class="product-name">Cafetera Moulinex</h5>
-                </div>      
-            </article>
-
-
-            <article class="card">
-                <div>
-                    <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
-                </div>
-                <div class="card-content">
-                    <div class="icon-truck">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <div class="product-info">
-                        <p>$230.00</p>
-                        <p>20% OFF</p>
-                    </div>
-                    <h5 class="product-name">MacBook Pro 2019</h5>
-                </div>   
-            
-            </article>
-            <article class="card">
-                <div>
-                    <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen del Samsung Galxy">
-                </div>
-                <div class="card-content">
-                    <div class="icon-truck">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <div class="product-info">
-                        <p>$70.500</p>
-                        <p>10% OFF</p>
-                    </div>
-                
-                <h5 class="product-name">Samsung Galaxy S10</h5>
-            </div> 
-            </article>
-            <article class="card">
-                <div>
-                    <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="imagen del SmartTv">
-                </div>
-                <div class="card-content">
-                    <div class="icon-truck">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <div class="product-info">
-                        <p>$23.200</p>
-                        <p>5% OFF</p>
-                    </div>
-                
-                <h5 class="product-name">SmartTv Samsung 43"</h5>
-                
-            </article>
-        </section>
-
-        
-        <section>
-            <h3 class="section-title">Sección de Ofertas</h3>
-            <article class="card">
-                <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de la cafetera">
+                <img src="img/img-cafetera-moulinex.jpg" width="100%" alt="Cafetera Moulinex">
                 <div class="card-content">
                     <div class="icon-truck">
                         <i class="fas fa-truck"></i>
@@ -133,28 +90,35 @@
                         <p>40% OFF</p>
                     </div>
                     <h5 class="product-name">Cafetera Moulinex</h5>
-                </div>      
-            </article>
-            <article class="card">
-                <div>
-                    <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
                 </div>
+            </article>
+        </section>
+
+        <section>
+            <h3 class="section-title">
+                Ofertas
+            </h3>
+            <article class="card">
+                <img src="img/img-macbook-pro-2019.jpg" width="100%" alt="Macbook">
                 <div class="card-content">
                     <div class="icon-truck">
                         <i class="fas fa-truck"></i>
                     </div>
                     <div class="product-info">
-                        <p>$230.00</p>
+                        <p>$230.800</p>
                         <p>20% OFF</p>
                     </div>
                     <h5 class="product-name">MacBook Pro 2019</h5>
-                </div>   
-            
-            </article>
-            <article class="card">
-                <div>
-                    <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen del Samsung Galxy">
                 </div>
+            </article>
+        </section>
+
+        <section>
+            <h3 class="section-title">
+                Ofertas
+            </h3>
+            <article class="card">
+                <img src="img/img-samsung-galaxy-s10.jpg" width="100%" alt="Tel-Samsung">
                 <div class="card-content">
                     <div class="icon-truck">
                         <i class="fas fa-truck"></i>
@@ -163,14 +127,17 @@
                         <p>$70.500</p>
                         <p>10% OFF</p>
                     </div>
-                
-                <h5 class="product-name">Samsung Galaxy S10</h5>
-            </div> 
-            </article>
-            <article class="card">
-                <div>
-                    <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="imagen del SmartTv">
+                    <h5 class="product-name">Teléfono Samsung</h5>
                 </div>
+            </article>
+        </section>
+
+        <section>
+            <h3 class="section-title">
+                Ofertas
+            </h3>
+            <article class="card">
+                <img src="img/img-tv-samsung-smart.jpg" width="100%" alt="TV-Samsung">
                 <div class="card-content">
                     <div class="icon-truck">
                         <i class="fas fa-truck"></i>
@@ -179,35 +146,43 @@
                         <p>$23.200</p>
                         <p>5% OFF</p>
                     </div>
-                
-                <h5 class="product-name">SmartTv Samsung 43"</h5>
+                    <h5 class="product-name">Samsung 43'</h5>
                 </div>
             </article>
         </section>
+
     </main>
-    <footer class="footer">
-        <div class="footerflex">
 
+    <footer>
+        
         <article class="footer-article">
+            <!--icono de la tarjeta de credito-->
             <i class="fas fa-credit-card"></i>
             <h5>Pagá con tarjeta o en efectivo</h5>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
+                seguro!</p>
         </article>
+
         <article class="footer-article">
+            <!--icono del regalo-->
             <i class="fas fa-gift"></i>
             <h5>Envío gratis desde $ 2.500</h5>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                Mercado Puntos.</p>
         </article>
+
         <article class="footer-article">
+            <!--icono de seguridad-->
             <i class="fas fa-user-shield"></i>
             <h5>Seguridad, de principio a fin</h5>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
+                protegid@.</p>
         </article>
+
         <p class="copy">Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</p>
-     </div>
+
     </footer>
 
-
-    
 </body>
+
 </html>
