--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,9 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 @import url("variables.css");
 @import url("general.css");
 @import url("header.css");
 @import url("footer.css");
 @import url("home.css");
-@import url("register.css");
-@import url("login.css");
+ */
+
+ @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+ @import url('variables.css'); /*modularizamos todos los css*/
+ @import url('general.css');
+ @import url('home.css');
+ @import url('header.css');
+ @import url('footer.css');
+ @import url('form.css')
