--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,4 +1,5 @@
-/* FOOTER */
+/*footer*/
+
 footer {
     padding-top: 40px;
 }
@@ -12,53 +13,22 @@ footer article.footer-article {
 }
 
 footer article.footer-article i {
-    color: var(--celeste);
-    font-size: 32px;
-    margin-bottom: 15px;
+    color: var(--light_blue);
+    font-size: 32px; /*puede ser 2 em?*/
+    margin-bottom: 15px; /*teoria decia 10px*/
 }
 
 footer article.footer-article h5 {
-    font-size: 16px;
+    font-size: var(--discounts-descriptions);
 }
 
 footer article.footer-article p {
-    font-size: 12px;
+    font-size: var(--paragraph);
     width: 77%;
     margin: 0 auto;
 }
 
 footer .copy {
-    color: var(--gris-oscuro);
+    color: var(--dark-grey);
     font-size: var(--paragraph);
-    margin: 0 0 10px 15px;
-}
-
-footer {
-    background-color: white;
-}
-
-.footerflex{
-    display: flex;  
-    background: white; 
-}
-
-.footerflex .footer-article{
-    text-align: center;
-    margin: 40px;
-}
-
-.footerflex .footer-article i{
-    font-size: 32px;
-    color: blue;
-    margin-bottom: 15px;
-}
-
-.footerflex .footer-article p{
-    font-size: 15px;
-    width: 75%;
-    margin: 0 auto;
-}
-
-footer i:hover {
-    background-color: rgb(255, 251, 0);
 }
