--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,9 +1,8 @@
-.form-container {
+/* .form-container {
     
     border-radius: 10px;
     margin: 0 auto;
-    /* height: fit-content; */
-   /*  height: -moz-fit-content; */
+   
     width: 100%;
     height: 600px;
     padding: 1rem;
@@ -69,4 +68,4 @@ span.error-message {
 .btn:hover{
     background-color: #0022AA;
     color: white;
-}
+} */
