--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,4 +1,4 @@
-.contenedor-form{
+/* .contenedor-form{
     width: 100%;
    height: 550px;
 background-color: var(--gris-claro);
@@ -49,4 +49,4 @@ input.input-style{
 .boton-color:hover{
     background-color: #0022AA;
     color: white;
-}
+} */
